@@ -1,4 +1,6 @@
 DIST catdoc-0.94.1.tar.gz 167329 RMD160 8de5450cfe672068de77d2d3096e3fa60aa73360 SHA1 dc3a7906cd02bc1823fedc292ba6b23662e39faf SHA256 8a0f74a803368537462c4233dc78153debb93db95e24dae357e6ca211129b58b
-EBUILD catdoc-0.94.1.ebuild 990 RMD160 96e02c8f782b57e994dae06158c735b59498705c SHA1 9a5cd723aad7119f10c37308c6c22b413b7bd914 SHA256 aade69a3d83589670aaeb621975bde5f0c27143bc5aaf3cc0611e581d895d09f
-MISC ChangeLog 2040 RMD160 35658dc12ce10d194cca55310355997412e0fb48 SHA1 41cc2c4c46a097fbe198d6c85968220a6787fe3b SHA256 dc52237e24111f0bfc5b68e28d3836266099b2dacebd5fc8bd6f436a38d77f35
+DIST catdoc-0.94.2.tar.gz 146012 RMD160 59eb7a026fd3a2dae74a3e7f01a58266f7efaf72 SHA1 50ce9d7cb24ad6b10a856c9c24183e2b0a11ca04 SHA256 03c98b103664e5d1b63de110854e93c2453bc10be5634f86c280303eb843d362
+EBUILD catdoc-0.94.1.ebuild 993 RMD160 e817ea2c9dd79c291d84ae865e39092bbbec9988 SHA1 bb2b65194f3d4fccebf693cf46be35e3127cdb29 SHA256 d061c52a72c89b9b3c8768f474719846a6d52e1688b99649f15d39fc04878c07
+EBUILD catdoc-0.94.2.ebuild 1000 RMD160 62f68d92f9e9a84e263e8b874147165d631ad05f SHA1 2cd49f833833b4af6e4c46a410d1053a50f249cb SHA256 ac2374c2abac93e5e9370d7a81f5cfd6320daf943fbde6f4f31a190a2c6f1de4
+MISC ChangeLog 2343 RMD160 fd14e23d610f665fc78f82af4dc33be6f2186d20 SHA1 d7f58ed52dbd83c01f0a39c5e96bae08015beb46 SHA256 e42f57d8bb11058170ae0fc7a0303235fbcfcbd0ac051dc980fdffd81704be54
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
